# agent-nexus

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  benchmark_generation.py  benchmark_results.json  docker-compose.yml  pyproject.toml  requirements.txt  test_agent_usage.py
src/: cli.py  config.py
src/agents/: generator.py  introspector.py  orchestrator.py  search.py
src/elasticsearch/: client.py
